--- a/1_click_deep_fake_for_free_by_SECourses.ipynb
+++ b/1_click_deep_fake_for_free_by_SECourses.ipynb
@@ -78,7 +78,7 @@
       "cell_type": "code",
       "source": [
         "%cd \"/content/roop\"\n",
-        "!python run.py -s \"face2.png\" -t \"brad org.mp4\" -o \"face_changed_video.mp4\" --keep-frames --keep-fps --execution-provider cuda"
+        "!python run.py -s \"face2.png\" -t \"brad org.mp4\" -o \"face_changed_video.mp4\" --keep-frames --keep-fps --output-video-quality 7 --execution-provider cuda"
       ],
       "metadata": {
         "id": "Is6U2huqSzLE"
@@ -99,7 +99,7 @@
       "cell_type": "code",
       "source": [
         "%cd \"/content/roop\"\n",
-        "!python run.py -s \"face2.png\" -t \"brad org.mp4\" -o \"face_restored_video.mp4\" --keep-frames --keep-fps --execution-provider cuda --frame-processor face_swapper face_enhancer"
+        "!python run.py -s \"face2.png\" -t \"brad org.mp4\" -o \"face_restored_video.mp4\" --keep-frames --keep-fps --output-video-quality 7 --execution-provider cuda --frame-processor face_swapper face_enhancer"
       ],
       "metadata": {
         "id": "_j18G_uPqc37"
@@ -126,6 +126,10 @@
         "  --reference-face-position REFERENCE_FACE_POSITION        position of the reference face\n",
         "  --reference-frame-number REFERENCE_FRAME_NUMBER          number of the reference frame\n",
         "  --similar-face-distance SIMILAR_FACE_DISTANCE            face distance used for recognition\n",
+        "  --temp-frame-format {jpg,png}                                              image format used for frame extraction\n",
+        "  --temp-frame-quality [0-100]                                               image quality used for frame extraction\n",
+        "  --output-video-encoder {libx264,libx265,libvpx-vp9,h264_nvenc,hevc_nvenc}  encoder used for the output video\n",
+        "  --output-video-quality [0-100]\n",
         "  --video-encoder {libx264,libx265,libvpx-vp9}             adjust output video encoder\n",
         "  --max-memory MAX_MEMORY                                  maximum amount of RAM in GB\n",
         "  --execution-provider {cpu} [{cpu} ...]                   available execution provider (choices: cpu, ...)\n",
